noinst_LIBRARIES= librandom.a libpacket.a libpoint.a libstatus.a libmapclient.a libobjtype.a

libobjtype_a_SOURCES = OBJ_Types.cpp OBJ_Types.h HN_Color.h
libpacket_a_SOURCES = NET_Packet.cpp NET_Packet.h HN_Enum.h HN_Types.h ENT_Types.h OBJ_Types.h
libpoint_a_SOURCES = HN_Point.cpp HN_Point.h
libstatus_a_SOURCES = HN_Status.cpp HN_Status.h
libmapclient_a_SOURCES= MAP_Client.cpp MAP_Client.h
librandom_a_SOURCES= HN_Random.cpp HN_Random.h
