bin_PROGRAMS= hacknetd

hacknetd_LDADD = ../common/libpacket.a ../common/libpoint.a
hacknetd_SOURCES = HN_Main_Server.cpp ENT_Base.cpp ENT_GridBug.cpp ENT_Human.cpp \
		OBJ_Base.cpp HN_Group.cpp HN_Game.cpp HN_Player.cpp HN_Dungeon.cpp MAP_Base.cpp \
		MAP_Hack.cpp MAP_Cavern.cpp NET_Server.cpp 

INCLUDES = -I../common/
