hacknet_LDADD = $(CURSESLIB) $(THREADLIB)

bin_PROGRAMS= hacknet hacknetd
hacknet_SOURCES = ENT_Base.cpp OBJ_Base.cpp HN_Display.cpp HN_DisplayTTY.cpp MAP_Base.cpp HN_Point.cpp HN_Version.cpp HN_Main_Client.cpp NET_Client.cpp NET_Packet.cpp

hacknetd_SOURCES = HN_Main_Server.cpp ENT_Base.cpp OBJ_Base.cpp HN_Game.cpp MAP_Base.cpp MAP_Hack.cpp MAP_Cavern.cpp HN_Version.cpp NET_Server.cpp HN_Point.cpp NET_Packet.cpp
